--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "karma-chrome-launcher": "^2.1.1",
     "popper": "^1.0.0",
+    "popper.js": "^1.12.6",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
